<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceListActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#CD000000"
        >

        <LinearLayout
            android:background="@android:color/holo_blue_bright"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginStart="@dimen/_5sdp"
                android:id="@+id/back"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:background="@drawable/effect"
                />
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/ble"
                android:textSize="@dimen/_15ssp"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/scan"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"
                android:background="@drawable/effect"
                />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_scan_devices"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
             />

        <TextView
            android:padding="@dimen/_5sdp"
            android:id="@+id/tv_paired"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paired"
            android:textSize="@dimen/_15ssp"
            android:textColor="@android:color/black"
            android:background="@drawable/pair_bg"
            />

            <ListView
                android:id="@+id/list_paired_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:footerDividersEnabled="true"
                android:divider="@android:color/holo_blue_bright"
                android:dividerHeight="@dimen/_1sdp"
                android:background="?android:selectableItemBackground"
                />


        <TextView
            android:padding="@dimen/_5sdp"
            android:id="@+id/tv_available"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:textSize="@dimen/_15ssp"
            android:textColor="@android:color/black"
            android:background="@drawable/pair_bg"

            />

            <ListView
                android:id="@+id/list_available_devices"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:footerDividersEnabled="true"
                android:divider="@android:color/holo_blue_bright"
                android:dividerHeight="@dimen/_1sdp"
                android:background="?android:selectableItemBackground"
                android:layout_weight="1"
                />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>